Styles should no longer overflow horribly

--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -48,6 +48,7 @@ body {
     align-content: center;
     align-items: center;
     grid-row-gap: .5em;
+    max-width: calc(100vw - 2em);
 
     .message-header {
         text-align: center;
@@ -63,6 +64,7 @@ body {
         grid-template-columns: auto 4em;
         align-items: center;
         justify-items: center;
+        justify-self: stretch;
 
         input {
             font-size: 1em;
